--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Cluster - Node View</title>
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="../css/style.css" type="text/css" />
-    <link rel="stylesheet" href="../css/xeditable.css">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/xeditable.css">
 </head>
 <body ng-controller="MainController as main">
 
@@ -67,14 +67,14 @@
     <div class="clearfix"></div>
 
     <!-- Load JS -->
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/angular.js"></script>
-    <script type="text/javascript" src="../js/angular-route.js"></script>
-    <script type="text/javascript" src="../js/angular-dragdrop.js"></script>
-    <script type="text/javascript" src="../js/xeditable.js"></script>
-    <script type="text/javascript" src="../js/ui-bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/clipboard.min.js"></script>
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/angular.js"></script>
+    <script type="text/javascript" src="js/angular-route.js"></script>
+    <script type="text/javascript" src="js/angular-dragdrop.js"></script>
+    <script type="text/javascript" src="js/xeditable.js"></script>
+    <script type="text/javascript" src="js/ui-bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/clipboard.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
